rendered/envs/friclu/munchkinchat/deployment-fabric-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fabric
    component: backend
  name: fabric-backend
  namespace: munchkinchat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fabric
      component: backend
  template:
    metadata:
      labels:
        app: fabric
        component: backend
    spec:
      containers:
        - env:
            - name: FABRIC_CONFIG_HOME
              value: /home/fabric/.config/fabric
            - name: OBSIDIAN_VAULT_PATH_1
              value: /home/fabric/sync/BubaSync/private
            - name: OBSIDIAN_VAULT_PATH_2
              value: /home/fabric/sync/BubaFritzShare
            - name: FABRIC_PATTERN_PATH
              value: /home/fabric/sync/BubaSync/patterns
            - name: PERSONAL_NAME
              value: Buba
            - name: TELEGRAM_BOT_TOKEN
              value: <path:kv/data/shared/telegram#botToken>
            - name: JOURNAL_FILE_RETRO_MONTHS
              value: "3"
          image: ghcr.io/fritzduchardt/fabric@sha256:b1dd0d97bb602047a1ca61ad7d68ec7d559638349b4726458217ee8935d0d3b4
          imagePullPolicy: Always
          name: fabric-backend
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /home/fabric/.config/fabric/.env
              name: fabric-env
              subPath: .env
            - mountPath: /home/fabric/sync
              name: sync
      nodeSelector:
        kubernetes.io/hostname: friclu-1
      volumes:
        - name: fabric-env
          secret:
            secretName: fabric
        - name: sync
          persistentVolumeClaim:
            claimName: sync
