rendered/envs/friclu/munchkinchat/deployment-fabric-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fabric
    component: ui
  name: fabric-ui
  namespace: munchkinchat
spec:
  replicas: null
  selector:
    matchLabels:
      app: fabric
      component: ui
  template:
    metadata:
      annotations:
        checksum/app-js: 79b074169e68b7d846dcf0b8986cdda8aa73d3430cba71fd1eca0f68474b6ab2
        checksum/index-html: 01a56fd3a4ac145780e9e2a3663536c00eae45d923adfac0f0fe70626a2f7be0
        checksum/lib-js: 6309042060257477b2c86d455c5d9d00ea152babbec87c86d2fcb6a38af29afb
        checksum/service-worker-js: defaa6683c6f8b0a62de0b14b6528484344695f078aafc62685d3af6af4386bb
      labels:
        app: fabric
        component: ui
    spec:
      containers:
        - image: ghcr.io/fritzduchardt/fabric-ui:master
          imagePullPolicy: Always
          name: fabric-ui
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /usr/share/nginx/html/app.js
              name: ui-scripts
              subPath: app.js
            - mountPath: /usr/share/nginx/html/lib.js
              name: ui-scripts
              subPath: lib.js
            - mountPath: /usr/share/nginx/html/index.html
              name: ui-scripts
              subPath: index.html
            - mountPath: /usr/share/nginx/html/manifest.json
              name: ui-scripts
              subPath: manifest.json
            - mountPath: /usr/share/nginx/html/service-worker.js
              name: ui-scripts
              subPath: service-worker.js
            - mountPath: /etc/nginx/nginx.conf
              name: ui-nginx-config
              subPath: nginx.conf
      volumes:
        - configMap:
            defaultMode: 420
            name: fabric-ui-scripts
          name: ui-scripts
        - configMap:
            defaultMode: 420
            name: fabric-ui-nginx-config
          name: ui-nginx-config
