rendered/envs/friclu/munchkinchat/service-fabric-ui.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fabric
    component: ui
  name: fabric-ui
  namespace: munchkinchat
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: fabric
    component: ui
  type: ClusterIP
