rendered/envs/friclu/munchkinchat/ingress-fabric.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: 32k
    nginx.ingress.kubernetes.io/proxy-buffers-number: "8"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
  labels:
    app: fabric
  name: fabric
  namespace: munchkinchat
spec:
  ingressClassName: nginx
  rules:
    - host: munchkinchat-friclu.duckdns.org
      http:
        paths:
          - backend:
              service:
                name: fabric-ui
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - munchkinchat-friclu.duckdns.org
      secretName: fabric-certificate
